# sovd-platform

./: .gitignore  README.md  dtc_database.json  openapi.yaml  raspberry_button.py  raspberry_button_config.yaml  setup.cfg  venv
.openapi-generator/: FILES
fix/: fix_base.py  fix_base2.py  fix_models.py
src/openapi_server/: dashboard_sovd.html  ecu1_config.yaml  ecu1_simulation.yaml  ecu2_config.yaml  generate_routes.py  generate_tests.py  main.py  shared.py
src/openapi_server/apis/: bulk_data_api.py  bulk_data_api_base.py  capabilities_api.py  capabilities_api_base.py  configurations_api.py  configurations_api_base.py  data_retrieval_api.py  data_retrieval_api_base.py  discovery_api.py  discovery_api_base.py  ecu1_capabilities_api.py  ecu1_data_retrieval_api.py  ecu1_fault_handling_api.py  ecu1_logging_api.py  ecu1_simulator.py  ecu1_updates_api.py  ecu2_capabilities_api.py  ecu2_data_retrieval_api.py  ecu2_fault_handling_api.py  ecu2_logging_api.py  ecu2_simulator.py  ecu2_updates_api.py  fault_handling_api.py  fault_handling_api_base.py  locking_api.py  locking_api_base.py  logging_api.py  logging_api_base.py  operations_control_api.py  operations_control_api_base.py  redis_init_multi.py  target_modes_api.py  target_modes_api_base.py  updates_api.py  updates_api_base.py
tests/: test_bulk_data_api.py  test_capabilities_api.py  test_configurations_api.py  test_data_retrieval_api.py  test_discovery_api.py  test_fault_handling_api.py  test_locking_api.py  test_logging_api.py  test_operations_control_api.py  test_target_modes_api.py  test_updates_api.py
(+65 files in other folders)
